<resources>
    <string name="exchange_name">module_exchange</string>
    <string name="exchange_wallet">钱包</string>
    <string name="exchange_account_balance">账户余额</string>
    <string name="exchange_money">￥%s</string>
    <string name="exchange_settlement_income">结算收益￥%s</string>
    <string name="exchange_recharge">充值</string>
    <string name="exchange_withdraw">提现</string>
    <string name="exchange_bankcard">银行卡</string>
    <string name="exchange_bill">账单</string>
    <string name="exchange_order">订单</string>
    <string name="exchange_commodity_chain">商链钻</string>
    <string name="exchange_recharge_record">充值记录</string>
    <string name="exchange_recharge_amount">充值金额</string>
    <string name="exchange_money_10">￥10</string>
    <string name="exchange_money_20">￥20</string>
    <string name="exchange_money_50">￥50</string>
    <string name="exchange_money_100">￥100</string>
    <string name="exchange_money_200">￥200</string>
    <string name="exchange_money_300">￥300</string>
    <string name="exchange_money_500">￥500</string>
    <string name="exchange_money_1000">￥1000</string>
    <string name="exchange_hint_input_recharge_amount">请输入充值金额</string>
    <string name="exchange_wechat_pay">微信支付</string>
    <string name="exchange_ali_pay">支付宝支付</string>
    <string name="exchange_bank_pay">银行卡支付</string>
    <string name="exchange_pay_immediately">立即支付</string>
    <string name="exchange_recharge_success">充值成功</string>
    <string name="exchange_finish">完成</string>
    <string name="exchange_pay_way">支付方式</string>
    <string name="exchange_receiver_bankcard">到账银行卡</string>
    <string name="exchange_amount">金额（元）</string>
    <string name="exchange_hint_amount_input">本次最多可提现10000元</string>
    <string name="exchange_next">下一步</string>
    <string name="exchange_waiting_account">等待到账</string>
    <string name="exchange_submit_query_tips">提交申请请24小时后查询</string>
    <string name="exchange_no_bankcard_tips">暂时未绑定任何银行卡</string>
    <string name="exchange_add_bankcard">添加银行卡</string>
    <string name="exchange_add_info">添加信息</string>
    <string name="exchange_bind_bankcard_tips">请绑定持卡本人的银行卡</string>
    <string name="exchange_type_of_certificate">证件类型</string>
    <string name="exchange_license_number">证件号</string>
    <string name="exchange_id_card">身份证</string>
    <string name="exchange_phone_number">手机号</string>
    <string name="exchange_person_info_input_tips">信息加密处理，仅用于银行验证</string>
    <string name="exchange_name1">姓名</string>
    <string name="exchange_hint_name_input">输入真实姓名</string>
    <string name="exchange_hint_id_number_input">输入身份证号</string>
    <string name="exchange_hint_save_phone_number_input">输入预留手机号</string>
    <string name="exchange_hint_phone_number_input">输入手机号码</string>
    <string name="exchange_verify_phone_number">验证手机号</string>
    <string name="exchange_verification_code">验证码</string>
    <string name="exchange_hint_verification_code_input">输入手机短信验证码</string>
    <string name="exchange_set_pwd">设置密码</string>
    <string name="exchange_input_pwd">输入密码</string>
    <string name="exchange_confirm_pwd">输入确认密码</string>
    <string name="exchange_ok">确定</string>
    <string name="exchange_select_card_type">请选择卡的类型</string>
    <string name="exchange_card_number">卡号</string>
    <string name="exchange_confirm">确认</string>
    <string name="exchange_bankcard_tips">仅支持储蓄卡</string>
    <string name="exchange_choose_bankcard">选择银行卡</string>
    <string name="exchange_debit_card">储蓄卡</string>
    <string name="exchange_bill_detail">账单详情</string>
    <string name="exchange_payment_method">付款方式</string>
    <string name="exchange_other_account">对方账户</string>
    <string name="exchange_collection_time">收款时间</string>
    <string name="exchange_order_number">订单号码</string>
    <string name="exchange_pay_pwd">支付密码</string>
</resources>
