<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="viewModel"
                type="com.lcworld.module_exchange.viewmodel.AddInfoViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appbg_color"
            >

        <include
                android:id="@+id/layout_title"
                layout="@layout/exchange_layout_title"/>


        <android.support.constraint.Guideline
                android:id="@+id/guideline1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/gap_size17"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="91dp"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/gap_size17"/>

        <TextView
                android:id="@+id/tv_tips_bankcard"
                style="@style/text_13_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/layout_title"
                android:layout_marginTop="@dimen/gap_size10"
                android:text="@string/exchange_bind_bankcard_tips"
                />
        <!--银行卡类型-->
        <View
                android:id="@+id/bg_card_type"
                app:layout_constraintTop_toBottomOf="@id/tv_tips_bankcard"
                style="@style/exchange_item_bg"
                android:layout_marginTop="@dimen/gap_size10"
                tools:ignore="MissingConstraints"/>

        <TextView
                android:id="@+id/tv_card_type_title"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_card_type"
                app:layout_constraintBottom_toBottomOf="@id/bg_card_type"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                android:text="@string/exchange_name1"/>

        <TextView
                android:id="@+id/tv_card_type"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_card_type"
                app:layout_constraintBottom_toBottomOf="@id/bg_card_type"
                app:layout_constraintLeft_toLeftOf="@id/guideline2"
                android:text="@string/exchange_debit_card"
                />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_card_type"
                app:layout_constraintBottom_toBottomOf="@id/bg_card_type"
                app:layout_constraintRight_toRightOf="@id/guideline3"
                android:src="@mipmap/arrow_right2"
                android:contentDescription="@string/image_description_default"/>

        <TextView
                android:id="@+id/tv_tips_info"
                style="@style/text_13_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/bg_card_type"
                android:layout_marginTop="@dimen/gap_size10"
                android:text="@string/exchange_bind_bankcard_tips"
                />
        <!--姓名-->
        <View
                android:id="@+id/bg_name"
                style="@style/exchange_item_bg"
                app:layout_constraintTop_toBottomOf="@id/tv_tips_info"
                tools:ignore="MissingConstraints"/>

        <TextView
                android:id="@+id/tv_name"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_name"
                app:layout_constraintBottom_toBottomOf="@id/bg_name"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                android:text="@string/exchange_name1"/>

        <EditText
                android:id="@+id/et_name"
                style="@style/text_14_333333"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_name"
                app:layout_constraintTop_toTopOf="@id/bg_name"
                app:layout_constraintLeft_toLeftOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@+id/iv_arrow_right1"
                android:layout_marginEnd="@dimen/gap_size10"
                android:hint="@string/exchange_hint_name_input"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                tools:ignore="Autofill"
                android:text="@{viewModel.name}"
                android:inputType="text"/>

        <ImageView
                android:id="@+id/iv_arrow_right1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_name"
                app:layout_constraintBottom_toBottomOf="@id/bg_name"
                app:layout_constraintRight_toRightOf="@id/guideline3"
                android:src="@mipmap/arrow_right2"
                android:contentDescription="@string/image_description_default"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_size1"
                android:background="@color/line_colorc"
                app:layout_constraintBottom_toBottomOf="@id/bg_name"/>
        <!--证件类型-->
        <View
                android:id="@+id/bg_certificate_type"
                app:layout_constraintTop_toBottomOf="@id/bg_name"
                style="@style/exchange_item_bg"
                tools:ignore="MissingConstraints"/>

        <TextView
                android:id="@+id/tv_certificate_type_title"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_certificate_type"
                app:layout_constraintBottom_toBottomOf="@id/bg_certificate_type"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                android:text="@string/exchange_type_of_certificate"/>

        <TextView
                android:id="@+id/tv_certificate_type"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_certificate_type"
                app:layout_constraintBottom_toBottomOf="@id/bg_certificate_type"
                app:layout_constraintLeft_toLeftOf="@id/guideline2"
                android:text="@string/exchange_id_card"
                />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_certificate_type"
                app:layout_constraintBottom_toBottomOf="@id/bg_certificate_type"
                app:layout_constraintRight_toRightOf="@id/guideline3"
                android:src="@mipmap/arrow_right2"
                android:contentDescription="@string/image_description_default"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_size1"
                android:background="@color/line_colorc"
                app:layout_constraintBottom_toBottomOf="@id/bg_certificate_type"/>
        <!--证件号-->
        <View
                android:id="@+id/bg_license_number"
                style="@style/exchange_item_bg"
                app:layout_constraintTop_toBottomOf="@id/bg_certificate_type"
                tools:ignore="MissingConstraints"/>

        <TextView
                android:id="@+id/tv_license_number"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_license_number"
                app:layout_constraintBottom_toBottomOf="@id/bg_license_number"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                android:text="@string/exchange_license_number"/>

        <EditText
                android:id="@+id/et_license_number"
                style="@style/text_14_333333"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_license_number"
                app:layout_constraintTop_toTopOf="@id/bg_license_number"
                app:layout_constraintLeft_toLeftOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@+id/iv_arrow_right2"
                android:layout_marginEnd="@dimen/gap_size10"
                android:hint="@string/exchange_hint_id_number_input"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@{viewModel.idcard}"
                tools:ignore="Autofill,TextFields"
                android:inputType="text"/>

        <ImageView
                android:id="@+id/iv_arrow_right2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_license_number"
                app:layout_constraintBottom_toBottomOf="@id/bg_license_number"
                app:layout_constraintRight_toRightOf="@id/guideline3"
                android:src="@mipmap/arrow_right2"
                android:contentDescription="@string/image_description_default"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_size1"
                android:background="@color/line_colorc"
                app:layout_constraintBottom_toBottomOf="@id/bg_license_number"/>
        <!--手机号-->
        <View
                android:id="@+id/bg_phone_number"
                style="@style/exchange_item_bg"
                app:layout_constraintTop_toBottomOf="@id/bg_license_number"
                tools:ignore="MissingConstraints"/>

        <TextView
                android:id="@+id/tv_phone_number"
                style="@style/text_14_333333_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_phone_number"
                app:layout_constraintBottom_toBottomOf="@id/bg_phone_number"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                android:text="@string/exchange_phone_number"/>

        <EditText
                android:id="@+id/et_phone_number"
                style="@style/text_14_333333"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_phone_number"
                app:layout_constraintTop_toTopOf="@id/bg_phone_number"
                app:layout_constraintLeft_toLeftOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@+id/iv_arrow_right3"
                android:layout_marginEnd="@dimen/gap_size10"
                android:hint="@string/exchange_hint_save_phone_number_input"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@{viewModel.phone}"
                tools:ignore="Autofill,TextFields"
                android:inputType="text"/>

        <ImageView
                android:id="@+id/iv_arrow_right3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/bg_phone_number"
                app:layout_constraintBottom_toBottomOf="@id/bg_phone_number"
                app:layout_constraintRight_toRightOf="@id/guideline3"
                android:src="@mipmap/arrow_right2"
                android:contentDescription="@string/image_description_default"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_size1"
                android:background="@color/line_colorc"
                app:layout_constraintBottom_toBottomOf="@id/bg_phone_number"/>

        <TextView
                android:id="@+id/tv_tips"
                style="@style/text_13_666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/bg_phone_number"
                android:layout_marginTop="@dimen/gap_size13"
                android:text="@string/exchange_person_info_input_tips"/>

        <Button
                android:id="@+id/bt_confirm"
                style="@style/exchange_btn_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/gap_size16"
                android:text="@string/exchange_confirm"
                app:onClickCommand="@{viewModel.nextOnClickCommand}"
                tools:ignore="MissingConstraints"/>

    </android.support.constraint.ConstraintLayout>
</layout>

