<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="viewModel"
                type="com.lcworld.module_exchange.viewmodel.SetPwdViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/appbg_color">

        <include
                android:id="@+id/layout_title"
                layout="@layout/exchange_layout_title"/>

        <View
                android:id="@+id/bg_pwd"
                app:layout_constraintTop_toBottomOf="@id/layout_title"
                android:layout_marginTop="@dimen/gap_size6"
                style="@style/exchange_item_bg"
                tools:ignore="MissingConstraints"/>

        <EditText
                android:id="@+id/et_pwd"
                style="@style/text_14_333333"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_pwd"
                app:layout_constraintTop_toTopOf="@id/bg_pwd"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/gap_size17"
                android:layout_marginStart="@dimen/gap_size17"
                android:hint="@string/exchange_input_pwd"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                tools:ignore="Autofill"
                android:text="@{viewModel.pwd}"
                android:inputType="textPassword"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/gap_size1"
                android:background="@color/line_colorc"
                app:layout_constraintBottom_toBottomOf="@id/bg_pwd"/>

        <View
                android:id="@+id/bg_pwd_again"
                style="@style/exchange_item_bg"
                app:layout_constraintTop_toBottomOf="@id/bg_pwd"
                tools:ignore="MissingConstraints"/>

        <EditText
                android:id="@+id/et_pwd_again"
                style="@style/text_14_333333"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_pwd_again"
                app:layout_constraintTop_toTopOf="@id/bg_pwd_again"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="@dimen/gap_size17"
                android:layout_marginStart="@dimen/gap_size17"
                android:hint="@string/exchange_confirm_pwd"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@{viewModel.pwdConfirm}"
                tools:ignore="Autofill"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/bt_confirm"
                style="@style/exchange_btn_confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/gap_size16"
                android:text="@string/exchange_ok"
                app:onClickCommand="@{viewModel.nextOnClickCommand}"
                tools:ignore="MissingConstraints"/>
    </android.support.constraint.ConstraintLayout>
</layout>
